css/style.css
@font-face {
  font-family: "Gilroy";
  src: url("../font/gilroylight.woff2");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Gilroy";
  src: url("../font/gilroyextrabold.woff2");
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: "Open Sans";
  src: url("../font/opensanslight.woff2");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Open Sans";
  src: url("../font/opensans.woff2");
  font-weight: 400;
  font-style: normal; 
}

body {
  margin: 0;
  padding: 0;

  font-weight: 800;
  font-size: 18px;
  line-height: 24px;
  font-family: "Gilroy", Arial, sans-serif;
  letter-spacing: 0.2px;
  color: #000000;

  background-color: #ffffff;
}

a {
  text-decoration: none;
}

.btn {
  font: inherit;
  text-align: center;
  text-transform: uppercase;
  vertical-align: middle;
  letter-spacing: 3.7px;
  color: rgba(0, 0, 0, 1);      

  background-color: #f0c52e;
  border: none;
  border-top: 1px solid #f4d361;
  border-bottom: 1px solid #f4d361;
}

.btn:hover,
.btn:focus {
  border: none;
}

.btn:active {
  color: rgba(0, 0, 0, 0.3);
}


/* header */

.main-header {
  color: #000000;

  background-color: #f7e296;
}

.main-header ul {
  list-style: none;
}

.site-logo:hover,
.site-logo:focus {
  opacity: 0.6;
}

.site-logo:active {
  opacity: 0.3;
}

.nav-level-0 > a {
  text-transform: uppercase;
  letter-spacing: 3.6px;
}

.site-navigation a {
  color: rgba(0, 0, 0, 1);    
}

.site-navigation a:hover,
.site-navigation a:focus {
  color: rgba(0, 0, 0, 0.6);  
}

.site-navigation a:active {
  color: rgba(0, 0, 0, 0.3);  
}

.dropdown a {
  font-weight: 300;
  font-size: 15px;
  line-height: 36px;
  font-family: "Open Sans", Arial, sans-serif;
}

.user-navigation a,
.product-navigation a {
  font-weight: 300;
  font-size: 15px;
  line-height: 30px;
  font-family: "Open Sans", Arial, sans-serif;
  color: rgba(0, 0, 0, 1);  
}

.user-navigation a:hover,
.user-navigation a:focus,
.product-navigation a:hover,
.product-navigation a:focus {
  color: rgba(0, 0, 0, 0.6);
}

.user-navigation a:active,
.product-navigation a:active {
  color: rgba(0, 0, 0, 0.3);
}

a.user-exit {
  color: rgba(0, 0, 0, 0.3);
}

.search-form {
  font-size: 15px;
  line-height: 30px;
}

.search-form input {
  background-color: transparent;
  border: none;
}

.search-form input:-ms-input-placeholder {
  font-weight: 300;
  font-family: "Open Sans", Arial, sans-serif;
  color: rgba(0, 0, 0, 0.3);
}

.search-form input::placeholder {
  font-weight: 300;
  font-family: "Open Sans", Arial, sans-serif;
  color: rgba(0, 0, 0, 0.3);
}

.search-form input:hover:-ms-input-placeholder {
  color: rgba(0, 0, 0, 0.6);
}

.search-form input:hover::placeholder {
  color: rgba(0, 0, 0, 0.6);
}

.search-form input:focus:-ms-input-placeholder {
  color: rgba(0, 0, 0, 1);

  border-bottom: 2px solid #000000;
}

.search-form input:focus::placeholder {
  color: rgba(0, 0, 0, 1);

  border-bottom: 2px solid #000000;
}

.search-button {
  font-size: 15px;
  line-height: 30px;
  font-family: "Open Sans", Arial, sans-serif;

  background-color: transparent;
  border: 2px solid #000000;
}

.search-button:hover {
  color: rgba(255, 255, 255, 1);

  background-color: #000000;
}

.search-button:active {
  color: rgba(255, 255, 255, 0.3);
}

/* main */
/* slider */

.slider-list {
  list-style: none;
}

.slider-number {
  font-size: 179px;
  line-height: 179px;
  letter-spacing: 1.8px;
  color: #ffffff;

  background-color: #000000;
}

.slider-slogan {
  font-size: 47px;
  line-height: 56px;
  letter-spacing: 0.5px;
}

.slider-description {
  font-weight: 300;
  font-size: 15px;
  line-height: 30px;
  font-family: "Open Sans", Arial, sans-serif;
}

.slider-item-feature th {
  font-weight: 300;
  font-size: 13px;
  line-height: 20px;
  font-family: "Open Sans", Arial, sans-serif;
  letter-spacing: 0.1px;
  color: #464646;
}

.slider-item-feature td {
  font-weight: 300;
  font-size: 36px;
  line-height: 48px;
  font-family: "Gilroy", Arial, sans-serif;
  letter-spacing: 0.4px;
}

.slider-switch-list {
  list-style: none;
}


/* main */
/* products */

.products-list {
  list-style: none;
}

.product-icon:hover {
  background-color: #f0c52e;
}

.products-list h3 {
  font-weight: 800;
  font-size: 18px;
  line-height: 24px;
  color: rgba(0, 0, 0, 1);  
}

.product-item a:active h3 {
  color: rgba(0, 0, 0, 0.3);  
}

.product-icon {
  background-color: #f7e296;
}

.product-item a:hover .product-icon,
.product-item a:focus .product-icon {
  background-color: #f0c52e;
}

.product-item a:active .product-icon {
  background-color: #f0c52e;
}

/* main */
/* services */

.services {
  background-color: #e5e5e5;
}

.services-list {
  /* border-right: 7px solid #000000; */
  list-style: none;
}

.services-btn {
  font: inherit;
  text-align: center;
  text-transform: uppercase;
  vertical-align: middle;
  letter-spacing: 3.7px;
  color: rgba(0, 0, 0, 1);      

  background-color: #f0c52e;
  border: none;
  border-top: 1px solid #f4d361;
  border-bottom: 1px solid #f4d361;
}

.services-btn:hover,
.services-btn:focus {
  border: none;
}

.services-btn:active,
.services-btn-active {
  color: #f7e184;

  background-color: #000000;
}

.services h3 {
  font-weight: 800;
  font-size: 47px;
  line-height: 48px;
  letter-spacing: 0.5px;
}

.services-description {
  font-weight: 300;
  font-size: 15px;
  line-height: 30px;
  font-family: "Open Sans", Arial, sans-serif;
  color: #464646;
}


/* main */
/* brands */

.brands-list {
  list-style: none;
}


/* main */
/* info */

.info h2 {
  font-size: 47px;
  line-height: 48px;
  letter-spacing: 0.5px;
}

.info p {
  font-weight: 300;
  font-size: 15px;
  line-height: 30px;
  font-family: "Open Sans", Arial, sans-serif;
  letter-spacing: normal;
  color: #464646;
}

.transport-companies-list {
  letter-spacing: normal;

  list-style: none;
}

.transport-companies-list a {
  font-size: 16px;
  line-height: 40px;
  color: #000000;
}
/* ... */

